reUpload, bug fixes